--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -11,7 +11,7 @@ body {
 
 // Globally hide the home poge's content title
 .home .entry-title {
-  text-indent: -999px;
+  .ti();
 }
 
 // Move the main h1/logo to the left
@@ -168,4 +168,9 @@ ul.nav-menu .focus > ul,
 // Make the font size of the home page's "artist" copy bigger
 .art-exhibits-header {
 	font-size: 40px;
+}
+
+// Add side margin to the footer content
+.site-footer-inner {
+	margin: 0 20px;
 }
