--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -13,9 +13,13 @@
 
   // Style the footer on desktops
   .site-footer {
+    // Structure
+    position: relative;
+    height: 30px;
+
+    // Style
     background: rgba(171, 171, 171, 1);
     color: rgba(54, 48, 48, 1);
-    height: 30px;
   }
 
   // Style the the element that contains all the navigation
