--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -1,29 +1,6 @@
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
-only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 320px),
-only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 320px),
-only screen and (        min-device-pixel-ratio: 2)      and (min-width: 320px),
-only screen and (                min-resolution: 192dpi) and (min-width: 320px),
-only screen and (                min-resolution: 2dppx)  and (min-width: 320px) {
+@media only screen and (min-width: 320px) and (max-width: 767px) {
 
-  /* Small screen, retina, stuff to override above media query */
-  .site-title {
-    background: url(/wp-/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
-    .logo();
-  }
-
-
-}
-
-
-
-
-
-
-
-@media only screen and (min-width: 320px) {
-
-  /* Medium screen, non-retina */
+  /* Hand-held screen, non-retina */
   .site-title {
     background: url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;
     .logo();
@@ -33,10 +10,22 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
 }
 
 
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px) and (max-width: 767px),
+only screen and (min--moz-device-pixel-ratio: 2)      and (min-width: 320px) and (max-width: 767px),
+only screen and (-o-min-device-pixel-ratio: 2/1)    and (min-width: 320px) and (max-width: 767px),
+only screen and (min-device-pixel-ratio: 2)      and (min-width: 320px) and (max-width: 767px),
+only screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
+only screen and (min-resolution: 2dppx)  and (min-width: 320px) and (max-width: 767px) {
+
+  /* Hand-held screen, retina */
+  .site-title {
+    background: url(/wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    .logo();
+  }
 
 
-
-
+}
 
 
 
