--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1414,8 +1414,8 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 a,a:focus,a:hover{color:#696767}
 .row{font-size:18px}
 .says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
-@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-resolution:192dpi) and (min-width:320px),only screen and (min-resolution:2dppx) and (min-width:320px){.site-title{background:url(/wp-/wp-content/themes/parlor/images/logo@2x.png) no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
-@media only screen and (min-width:320px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
+@media only screen and (min-width:320px) and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:320px) and (max-width:767px),only screen and (min-device-pixel-ratio:2) and (min-width:320px) and (max-width:767px),only screen and (min-resolution:192dpi) and (min-width:320px) and (max-width:767px),only screen and (min-resolution:2dppx) and (min-width:320px) and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
 @media only screen and (min-width:768px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo.png) no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}
 .menu-item::before{content:url(../../../../../wp/wp-content/themes/parlor/images/nav-bullet.png);margin-right:5px}}
 @media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-resolution:192dpi) and (min-width:768px),only screen and (min-resolution:2dppx) and (min-width:768px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}
@@ -1462,7 +1462,7 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .col-md-6{width:300px;display:inline-block;vertical-align:top}}
 @media (min-width:1200px){.page{width:auto;margin:0 auto}
 .site-header{max-width:900px}
-.site-footer{background:#ababab;color:#363030;height:30px}
+.site-footer{position:relative;height:30px;background:#ababab;color:#363030}
 .navbar{max-width:600px;display:inline-block;left:47px}}
 @media (max-width:767px){.home .site-main{min-height:1200px}
 .site-header{text-align:center}
