--- a/css-build/imports/mixins.less
+++ b/css-build/imports/mixins.less
@@ -6,6 +6,15 @@
   .ti();
 }
 
+// Facebook link
+.facebook-image {
+  background-size: 20px 20px;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  .ti();
+}
+
 
 .col-md-6-mixin {
   width: 300px;
@@ -13,6 +22,29 @@
   vertical-align: top;
 }
 
+
+// z-index mixins
+// 5 or less should be fine, but plugin code may mean more are required
+// WordPress can also get crazy with z-indexes (e.g. "z-index: 9999")
+.z1 {
+  z-index: 1;
+}
+
+.z2 {
+  z-index: 2;
+}
+
+.z3 {
+  z-index: 3;
+}
+
+.z4 {
+  z-index: 4;
+}
+
+.z5 {
+  z-index: 5;
+}
 /*
  * HELPER CLASSES
  */
