--- a/css-build/imports/min-width-768.less
+++ b/css-build/imports/min-width-768.less
@@ -36,7 +36,7 @@
 	}
 
 	// Push hours all the way right in ".contact-information-inner"
-	.hours {
+	.hours, .sitemap-link {
 		float: right;
 	}
 
