--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -31,10 +31,6 @@ only screen and (min-resolution: 2dppx)  and (min-width: 320px) and (max-width: 
 
 
 
-
-
-
-
 @media only screen and (min-width: 768px) {
 
   /* Medium screen, non-retina */
@@ -44,8 +40,13 @@ only screen and (min-resolution: 2dppx)  and (min-width: 320px) and (max-width: 
   }
 
   .menu-item::before {
-    content:url(/wp//wp-content/themes/parlor/images/nav-bullet.png);
+    content:url(/wp/wp-content/themes/parlor/images/nav-bullet.png);
     margin-right:5px;
+  }
+
+  .facebook-link {
+    background: url(/wp/wp-content/themes/parlor/images/facebook-image.png) no-repeat;
+    .facebook-image();
   }
 
 }
@@ -62,6 +63,11 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
   .site-title {
     background: url(/wp/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     .logo();
+  }
+
+  .facebook-link {
+    background: url(/wp/wp-content/themes/parlor/images/facebook-image@2x.png) no-repeat;
+    .facebook-image();
   }
 
   .menu-item::before {
