add padding to the mobile menu

--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -47,7 +47,11 @@
 
   // Add a background color to the mobile drop-down menu
   .menu-main-container {
+    // Structure
     background: rgba(246, 246, 246, 1);
+    padding: 12px;
+
+    // Style
     -webkit-box-shadow: 10px 9px 5px -5px rgba(0,0,0,0.37);
     -moz-box-shadow: 10px 9px 5px -5px rgba(0,0,0,0.37);
     box-shadow: 10px 9px 5px -5px rgba(0,0,0,0.37);
