--- a/css-build/style.css
+++ b/css-build/style.css
@@ -395,6 +395,7 @@ ul.nav-menu .focus > ul,
   }
   .menu-main-container {
     background: #f6f6f6;
+    padding: 12px;
     -webkit-box-shadow: 10px 9px 5px -5px rgba(0, 0, 0, 0.37);
     -moz-box-shadow: 10px 9px 5px -5px rgba(0, 0, 0, 0.37);
     box-shadow: 10px 9px 5px -5px rgba(0, 0, 0, 0.37);
