--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -6,9 +6,16 @@
     margin: 0 auto;
   }
 
-   // Limit the header's width to 900px
+  .navbar {
+    float: right;
+    top: 30px;
+    left: 8px;
+  }
+  
+   // Limit the header's width to 900px & pad it on the sides
   .site-header {
     max-width: 900px;
+    padding: 0 40px;
   }
 
   // Style the footer on desktops
@@ -20,13 +27,6 @@
     // Style
     background: rgba(171, 171, 171, 1);
     color: rgba(54, 48, 48, 1);
-  }
-
-  // Style the the element that contains all the navigation
-  .navbar {
-    max-width:600px;
-    display: inline-block;
-    left: 47px;
   }
 
 }
