--- a/css-build/imports/bootstrap-override.less
+++ b/css-build/imports/bootstrap-override.less
@@ -16,6 +16,8 @@ a:focus,a:hover{
 }
 
 // Increase the font size in the Bootstrap "row" class
+// Globally override its margin settings
 .row {
   font-size: 18px;
+  margin: 0 auto;
 }
