--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -171,7 +171,7 @@ ul.nav-menu .focus > ul,
 */
 
 // Space out the two rows on the home page
-.homepage-top-row {
+.homepage-row {
 	margin: 0 auto 70px;
   max-width: 700px;
 }
