--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -432,7 +432,6 @@ pre code{padding:0;font-size:inherit;color:inherit;white-space:pre-wrap;border-r
 @media (min-width:768px){.container{width:750px}}
 @media (min-width:992px){.container{width:970px}}
 @media (min-width:1200px){.container{width:1170px}}
-.row{margin-right:-15px;margin-left:-15px}
 .col-lg-1,.col-lg-10,.col-lg-11,.col-lg-12,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,.col-md-1,.col-md-10,.col-md-11,.col-md-12,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-sm-1,.col-sm-10,.col-sm-11,.col-sm-12,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-xs-1,.col-xs-10,.col-xs-11,.col-xs-12,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9{position:relative;min-height:1px;padding-right:15px;padding-left:15px}
 .col-xs-1,.col-xs-10,.col-xs-11,.col-xs-12,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9{float:left}
 .col-xs-12{width:100%}
@@ -1405,10 +1404,10 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 .visible-print-inline-block{display:none!important}
 @media print{.visible-print-inline-block{display:inline-block!important}
 .hidden-print{display:none!important}}
-.col-md-6-mixin,.home-link,.nav-menu li{display:inline-block}
+.col-xs-6-mixin,.home-link,.nav-menu li{display:inline-block}
 .logo{background-size:200px 41px;width:200px;height:41px}
 .facebook-image{background-size:20px 20px;width:20px;height:20px;position:absolute}
-.col-md-6-mixin{width:300px;vertical-align:top}
+.col-xs-6-mixin{width:300px;vertical-align:top}
 .z1{z-index:1}
 .z2{z-index:2}
 .z3{z-index:3}
@@ -1416,7 +1415,7 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 .z5{z-index:5}
 .hide-element{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 a,a:focus,a:hover{color:#696767}
-.row{font-size:18px}
+.row{font-size:18px;margin:0 auto}
 .says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 @media only screen and (min-width:320px)and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
 @media only screen and (-webkit-min-device-pixel-ratio:2)and (min-width:320px)and (max-width:767px),only screen and (min-device-pixel-ratio:2)and (min-width:320px)and (max-width:767px),only screen and (min-resolution:192dpi)and (min-width:320px)and (max-width:767px),only screen and (min-resolution:2dppx)and (min-width:320px)and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo@2x.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
@@ -1450,7 +1449,7 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .nav-menu ul ul a,ul.nav-menu ul a{margin:0;width:200px;color:#fff}
 .nav-menu ul ul a:focus,.nav-menu ul ul a:hover,ul.nav-menu ul a:focus,ul.nav-menu ul a:hover{background-color:#db572f}
 .nav-menu .focus>ul,.nav-menu ul li:hover>ul,ul.nav-menu .focus>ul,ul.nav-menu li:hover>ul{clip:inherit;overflow:inherit;height:inherit;width:inherit}
-.homepage-top-row{margin:0 auto 70px;max-width:700px}
+.homepage-row{margin:0 auto 70px;max-width:700px}
 .row-inner-element{margin:0 auto;width:300px}
 .art-exhibits-header{font-size:40px}
 .site-footer-inner{margin:0 20px}
@@ -1465,7 +1464,7 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .home-page-info{padding-top:30px}
 .row-inner-element{margin:0}}
 @media (min-width:992px)and (max-width:1199px){.site-header{max-width:818px}
-.col-md-6{width:300px;display:inline-block;vertical-align:top}}
+.col-xs-6{width:300px;display:inline-block;vertical-align:top}}
 @media (min-width:1200px){.page{width:auto;margin:0 auto}
 .navbar{float:right;top:30px;left:8px}
 .site-header{max-width:900px;padding:0 40px}
@@ -1492,5 +1491,5 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .entry-content{min-width:320px;margin:0 auto}
 .home-page-info{padding:0 0 30px}
 .site-footer{height:42px;min-width:320px;width:100%}}
-@media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}}
+@media (min-width:768px)and (max-width:991px){.col-xs-6{width:300px;display:inline-block;vertical-align:top}}
 .frs-slideshow-container{margin:0!important}
