update facebook link-related styles

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -46,6 +46,11 @@ body {
 	background-color: rgba(171, 171, 171, 1);
 }
 
+// Add side margin to the footer content
+.site-footer-inner {
+	margin: 0 20px;
+}
+
 // Move the main h1/logo to the left
 .home-link {
 	display: inline-block;
@@ -187,7 +192,7 @@ ul.nav-menu .focus > ul,
 	font-size: 40px;
 }
 
-// Add side margin to the footer content
-.site-footer-inner {
-	margin: 0 20px;
+// Hide copy inside the <span> of the Facebook link
+.facebook-link-text {
+	.hide-element();
 }
