fix bootstrap columns, remove slideshow "!important" code (yay!!!)

--- a/css-build/imports/PLUGIN_wp_fluid_responsive_images.less
+++ b/css-build/imports/PLUGIN_wp_fluid_responsive_images.less
@@ -1,6 +1,6 @@
 // Remove all slideshow padding
 // Sucks that "!important" is needed to do this, but there is no choice
 
-.frs-slideshow-container {
+/* .frs-slideshow-container {
   margin: 0 !important;
-}
+} */
