--- a/css-build/imports/min-width-768-max-width-991.less
+++ b/css-build/imports/min-width-768-max-width-991.less
@@ -1,6 +1,6 @@
 @media (min-width: 768px) and (max-width: 991px) {
 
-	.col-xs-6 {
+	.col-md-6 {
 		width: 300px;
 		display: inline-block;
 		vertical-align: top;
