--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1404,10 +1404,10 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 .visible-print-inline-block{display:none!important}
 @media print{.visible-print-inline-block{display:inline-block!important}
 .hidden-print{display:none!important}}
-.col-xs-6-mixin,.home-link,.nav-menu li{display:inline-block}
+.col-md-6-mixin,.home-link,.nav-menu li{display:inline-block}
 .logo{background-size:200px 41px;width:200px;height:41px}
 .facebook-image{background-size:20px 20px;width:20px;height:20px;position:absolute}
-.col-xs-6-mixin{width:300px;vertical-align:top}
+.col-md-6-mixin{width:300px;vertical-align:top}
 .z1{z-index:1}
 .z2{z-index:2}
 .z3{z-index:3}
@@ -1465,7 +1465,7 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .home-page-info{padding-top:30px}
 .row-inner-element{margin:0}}
 @media (min-width:992px)and (max-width:1199px){.site-header{max-width:818px}
-.col-xs-6{width:300px;display:inline-block;vertical-align:top}}
+.col-md-6{width:300px;display:inline-block;vertical-align:top}}
 @media (min-width:1200px){.page{width:auto;margin:0 auto}
 .navbar{float:right;top:30px;left:8px}
 .site-header{max-width:900px;padding:0 40px}
@@ -1492,5 +1492,4 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .entry-content{min-width:320px;margin:0 auto}
 .home-page-info{padding:0 0 30px}
 .site-footer{height:42px;min-width:320px;width:100%}}
-@media (min-width:768px)and (max-width:991px){.col-xs-6{width:300px;display:inline-block;vertical-align:top}}
-.frs-slideshow-container{margin:0!important}
+@media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}}
